--- a/rag/Makefile
+++ b/rag/Makefile
@@ -5,7 +5,9 @@ deps:
 	go mod tidy
 	go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 	go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
-	go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2@latest 
+	go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2@latest
+	go get -u github.com/go-jet/jet/v2
+	go install github.com/go-jet/jet/v2/cmd/jet@latest
 	export PATH=$PATH:$(go env GOPATH)/bin
 	@echo "Dependencies installed"
 
@@ -42,3 +44,7 @@ clean:
 # Полная генерация (все зависимости + очистка + генерация)
 generate: clean deps proto swagger
 	@echo "Full generation completed"
+
+# Генерация схем используя jet
+jet: deps
+	jet -source=postgresql -host=localhost -port=5432 -user=rag_user -password=rag_password -dbname=rag_db -schema=public -path=generated/
