[float-weaver] init embeder

--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# nn models
+# TODO: clean up that
+float-weaver/models/ 
+float-weaver/float-weaver/models
