[rag] add usecase is working

--- a/rag/Makefile
+++ b/rag/Makefile
@@ -1,5 +1,7 @@
 .PHONY: proto build run clean swagger
 
+export PATH := $(LOCAL_BIN):$(PATH)
+
 # Установка зависимостей
 deps:
 	go mod tidy
@@ -8,6 +10,7 @@ deps:
 	go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2@latest
 	go get -u github.com/go-jet/jet/v2
 	go install github.com/go-jet/jet/v2/cmd/jet@latest
+	go install go.uber.org/mock/mockgen@latest
 	export PATH=$PATH:$(go env GOPATH)/bin
 	@echo "Dependencies installed"
 
@@ -41,10 +44,22 @@ clean:
 	rm -rf pkg/rag/*.swagger.json
 	@echo "Clean complete"
 
-# Полная генерация (все зависимости + очистка + генерация)
-generate: clean deps proto swagger
-	@echo "Full generation completed"
-
 # Генерация схем используя jet
 jet: deps
 	jet -source=postgresql -host=localhost -port=5432 -user=rag_user -password=rag_password -dbname=rag_db -schema=public -path=generated/
+
+PROTO_DIR=../float-weaver/api
+PROTO_FILE=floatweaver.proto
+OUT_DIR=./pkg/floatweaver
+
+gen-floatweaver:
+	mkdir -p $(OUT_DIR)
+	protoc \
+	  --proto_path=$(PROTO_DIR) \
+	  --go_out=$(OUT_DIR) \
+	  --go-grpc_out=$(OUT_DIR) \
+	  $(PROTO_DIR)/$(PROTO_FILE)
+
+# Полная генерация (все зависимости + очистка + генерация)
+generate: clean deps proto swagger gen-floatweaver jet
+	@echo "Full generation completed"
